test/netlist/error/conflicting-unused.bop
A(a, b) = c
with unused = d
where
  d = Not(a);
  d = Not(b);
  c = And(a, b);
end where;
